# wgpu-wonnx-template

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
res/: suzanne.mtl
src/: camera.rs  lib.rs  light.wgsl  main.rs  nn.rs  state.rs  texture.rs
www/: .gitignore  README.md  index.html  index.js  package-lock.json  package.json
